* Wed Aug 12 2020 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.6.0-0
- Ensure that the auditd service is not managed if the kernel is not enforcing
  auditing
- Add an acceptance test for toggling disabling auditing without modifying the
  kernel parameter

* Fri Aug 07 2020 Marcel Fischer <marcel@fury.home.loc> - 8.5.3-0
- Add `INCREMENTAL_ASYNC` to possible values for `$::auditd::flush`

* Tue Aug 04 2020 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.5.2-0
- Ensure that facts are properly confined
- Utilize the new simplib__auditd fact

* Mon Jul 13 2020 Adam Yohrling <adam.yohrling@onyxpoint.com> - 8.5.1-0
- Add `built_in` audit profile to the subsystem that provides ability
  to include and manage sample rulesets to be compiled into active rules

* Wed Jun 24 2020 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.5.1-0
- Added a File statement for /etc/audit/audit.rules.prev to prevent unnecessary
  flapping
- Ensure that the inspec tests don't run if there isn't a profile available
- Ensure that kmod is audited in all STIG modes on EL7+

* Mon Jun 15 2020 Jan Fickler <jan.fickler@webfleet.com> - 8.5.1-0
- Fix regex substitution for bad path characters

* Thu Oct 31 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.5.0-0
- Allow users to knockout entries from arrays specified in Hiera
- Multiple rules added based on best practices mostly pulled from
  /usr/share/doc/auditd:
  - Audit 32 bit operations on 64 bit systems
  - Audit calls to the auditd CLI commands
  - Audit IPv4 and IPv6 inbound connections
  - Optionally audit IPv4 and IPv6 outbound connections
  - Audit suspicious applications
  - Audit systemd
  - Audit the auditd configuration space
  - Ignore time daemon logs (clutter)
  - Ignore CRYPTO_KEY_USER logs (clutter)
  - Add ability to set the backlog_wait_time
  - Set loginuid_immutable

* Thu Oct 24 2019 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 8.5.0-0
- Set defaults for syslog parameters if auditd version is unknown.