@@ -13,15 +13,21 @@ describe 'auditd' do
   context 'supported operating systems' do
     on_supported_os.each do |os, os_facts|
       context "on #{os}" do
-        let(:facts) do
+        let(:base_facts) do
           os_facts.merge(
             {
+              # Oldest version shipping with EL7
+              :auditd_version => '2.4.1',
               :simplib__auditd => {
                 'enabled' => true,
                 'kernel_enforcing' => true
               }
             }
           )
+        end
+
+        let(:facts) do
+          base_facts
         end
 
         context 'auditd with default parameters' do
@@ -50,6 +56,61 @@ describe 'auditd' do
           it { is_expected.to compile.and_raise_error(/Auditd requires \$space_left to be greater than \$admin_space_left, otherwise it will not start/) }
         end
 
+        context 'with space_left as a percentage' do
+          let(:params) do
+            {
+              :space_left => '20%'
+            }
+          end
+
+          it { is_expected.to compile.and_raise_error(/cannot contain "%"/) }
+        end
+
+        context 'with space_left as a percentage' do
+          let(:params) do
+            {
+              :admin_space_left => '20%'
+            }
+          end
+
+          it { is_expected.to compile.and_raise_error(/cannot contain "%"/) }
+        end
+
+        context 'auditd 2.8.5' do
+          context 'with space_left as a percentage' do
+            let(:facts) do
+              base_facts.merge({
+                :auditd_version => '2.8.5'
+              })
+            end
+
+            let(:params) do
+              {
+                :space_left => '20%'
+              }
+            end
+
+            it { is_expected.to compile.with_all_deps }
+          end
+
+          context 'with admin_space_left as a percentage' do
+            let(:facts) do
+              base_facts.merge({
+                :auditd_version => '2.8.5'
+              })
+            end
+
+            let(:params) do
+              {
+                :admin_space_left => '20%'
+              }
+            end
+
+            it { is_expected.to compile.with_all_deps }
+            it { is_expected.to contain_class('auditd').with_space_left('21%') }
+          end
+        end
+
         context 'auditd with auditing disabled' do
           let(:params) {{
             :enable => false
@@ -60,7 +121,6 @@ describe 'auditd' do
           it { is_expected.to_not contain_class('auditd::config') }
           it { is_expected.to contain_class('auditd::service') }
         end
-
       end
     end
   end
